--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-sass": "node-sass --include-path scss scss/style.scss css/style.css",
+    "build-sass": "node-sass --include-path scss scss/style.scss Ccss/style.css",
     "watch-sass": "nodemon -e scss -x  \"npm run build-sass\""
   },
   "keywords": [],
